--- a/kaggle/titanic/TitanicMachineLearningFromDisasterTutorial.ipynb
+++ b/kaggle/titanic/TitanicMachineLearningFromDisasterTutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:060588be9644508b569a3d673b0cee3d6e60c3dcaebd56dec522d07de8b25089"
+  "signature": "sha256:d3336929e105b56767d7ffa99c2306f3913711b282d3adfa13b3ffaf0c4dedcb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -591,8 +591,173 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "\u306a\u3093\u306876%\u3082\u5f53\u305f\u3063\u3066\u3044\u307e\u3059\u3002\u305f\u3060\u3057evaluation\u306e\u3068\u3053\u308d\u306b\u3082\u3042\u3063\u305f\u3088\u3046\u306b\u30c6\u30b9\u30c8\u30bb\u30c3\u30c8\u304b\u3089\u30e9\u30f3\u30c0\u30e0\u306b\u9078\u3070\u308c\u305f50%\u306b\u5bfe\u3059\u308b\u8a55\u4fa1\u3067\u3042\u308b\u3053\u3068\u306b\u6ce8\u610f\u3002\u3061\u306a\u307f\u306bsubmit\u6642\u70b9\u30671902\u4eba\u3055\u3093\u304b\u3057\u3066\u3044\u307e\uff53"
+      "\u306a\u3093\u306876%\u3082\u5f53\u305f\u3063\u3066\u3044\u307e\u3059\u3002\u305f\u3060\u3057evaluation\u306e\u3068\u3053\u308d\u306b\u3082\u3042\u3063\u305f\u3088\u3046\u306b\u30c6\u30b9\u30c8\u30bb\u30c3\u30c8\u304b\u3089\u30e9\u30f3\u30c0\u30e0\u306b\u9078\u3070\u308c\u305f50%\u306b\u5bfe\u3059\u308b\u8a55\u4fa1\u3067\u3042\u308b\u3053\u3068\u306b\u6ce8\u610f\u3002\u3061\u306a\u307f\u306bsubmit\u6642\u70b9\u30671902\u4eba\u53c2\u52a0\u3057\u3066\u3044\u307e\u3059\u3002"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# So we add a ceiling\n",
+      "fare_ceiling = 40\n",
+      "# then modify the data in the Fare column to = 39, if it is greater or equal to the ceiling\n",
+      "data[ data[0::,9].astype(np.float) >= fare_ceiling, 9 ] = fare_ceiling - 1.0\n",
+      "\n",
+      "fare_bracket_size = 10\n",
+      "number_of_price_brackets = fare_ceiling / fare_bracket_size\n",
+      "\n",
+      "# I know there were 1st, 2nd and 3rd classes on board\n",
+      "number_of_classes = 3\n",
+      "\n",
+      "# But it's better practice to calculate this from the data directly\n",
+      "# Take the length of an array of unique values in column index 2\n",
+      "number_of_classes = len(np.unique(data[0::,2])) \n",
+      "\n",
+      "# Initialize the survival table with all zeros\n",
+      "survival_table = np.zeros((2, number_of_classes, number_of_price_brackets))  # 2\u306f\u5973\u6027\u3068\u7537\u6027"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in xrange(number_of_classes):       #loop through each class\n",
+      "  for j in xrange(number_of_price_brackets):   #loop through each price bin\n",
+      "\n",
+      "    women_only_stats = data[\n",
+      "                         (data[0::,4] == \"female\")\n",
+      "                       &(data[0::,2].astype(np.float)\n",
+      "                             == i+1)\n",
+      "                       &(data[0::,9].astype(np.float)\n",
+      "                            >= j*fare_bracket_size)\n",
+      "                       &(data[0::,9].astype(np.float)\n",
+      "                            < (j+1)*fare_bracket_size)\n",
+      "                          , 1]                       \n",
+      "\n",
+      "\n",
+      "    men_only_stats = data[\n",
+      "                         (data[0::,4] != \"female\")\n",
+      "                       &(data[0::,2].astype(np.float)\n",
+      "                             == i+1)\n",
+      "                       &(data[0::,9].astype(np.float)\n",
+      "                            >= j*fare_bracket_size)\n",
+      "                       &(data[0::,9].astype(np.float)\n",
+      "                            < (j+1)*fare_bracket_size)\n",
+      "                          , 1]\n",
+      "    survival_table[0,i,j] = np.mean(women_only_stats.astype(np.float)) \n",
+      "    survival_table[1,i,j] = np.mean(men_only_stats.astype(np.float))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 45
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "survival_table[ survival_table != survival_table ] = 0.  # nan\u30920\u306b\u3059\u308b"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 47
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "survival_table"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 48,
+       "text": [
+        "array([[[ 0.        ,  0.        ,  0.83333333,  0.97727273],\n",
+        "        [ 0.        ,  0.91428571,  0.9       ,  1.        ],\n",
+        "        [ 0.59375   ,  0.58139535,  0.33333333,  0.125     ]],\n",
+        "\n",
+        "       [[ 0.        ,  0.        ,  0.4       ,  0.38372093],\n",
+        "        [ 0.        ,  0.15873016,  0.16      ,  0.21428571],\n",
+        "        [ 0.11153846,  0.23684211,  0.125     ,  0.24      ]]])"
+       ]
+      }
+     ],
+     "prompt_number": 48
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "survival_table[ survival_table < 0.5 ] = 0\n",
+      "survival_table[ survival_table >= 0.5 ] = 1 "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 49
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "test_file = open('./data/test.csv', 'rb')\n",
+      "test_file_object = csv.reader(test_file)\n",
+      "header = test_file_object.next()\n",
+      "predictions_file = open(\"./tutorial/genderclassmodel.csv\", \"wb\")\n",
+      "p = csv.writer(predictions_file)\n",
+      "p.writerow([\"PassengerId\", \"Survived\"])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 58
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for row in test_file_object:                 # We are going to loop\n",
+      "    for j in xrange(number_of_price_brackets):  # For each passenger we\n",
+      "                                              # loop thro each price bin\n",
+      "        try:                                      # Some passengers have no\n",
+      "                                              # Fare data so try to make\n",
+      "          row[8] = float(row[8])                  # a float\n",
+      "        except:                                   # If fails: no data, so \n",
+      "          bin_fare = 3 - float(row[1])            # bin the fare according Pclass\n",
+      "          break                                   # Break from the loop\n",
+      "\n",
+      "        if row[8] > fare_ceiling:              # If there is data see ifq\n",
+      "                                              # it is greater than fare\n",
+      "                                              # ceiling we set earlier\n",
+      "          bin_fare = number_of_price_brackets-1   # If so set to highest bin\n",
+      "          break\n",
+      "        if row[8] >= j * fare_bracket_size and row[8] < (j+1) * fare_bracket_size:             # If passed these tests \n",
+      "            bin_fare = j                            # then assign index\n",
+      "            break\n",
+      "    if row[3] == 'female':                             #If the passenger is female\n",
+      "        p.writerow([row[0], \"%d\" % \\\n",
+      "                    int(survival_table[0, float(row[1])-1, bin_fare])])\n",
+      "    else:                                          #else if male\n",
+      "        p.writerow([row[0], \"%d\" % \\\n",
+      "                   int(survival_table[1, float(row[1])-1, bin_fare])])\n",
+      "     \n",
+      "# Close out the files.\n",
+      "test_file.close() \n",
+      "predictions_file.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 59
     },
     {
      "cell_type": "code",
