--- a/kaggle/sklearn-tutorial/DataScienceLondonScikit-learn.ipynb
+++ b/kaggle/sklearn-tutorial/DataScienceLondonScikit-learn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:151a0e1f7428c81ab6fbf03e02aa5a4e6c38208e8ccf8e01d3e6fd720751987b"
+  "signature": "sha256:550d63a5071318ecae40aadff09942b4c04d42b7ef3fc60e03008044c688baf7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1291,6 +1291,8 @@
      "collapsed": false,
      "input": [
       "# transform(): \u5358\u8a9e-\u6587\u66f8\u884c\u5217\u306esparse matrix\u3092\u8fd4\u3059\n",
+      "# [[0, 3, 4.,..,2],   # 0\u756a\u76ee\u306e\u6587\u66f8\u306e\u8a9e\u5f59\u306b\u5bfe\u3059\u308b\u983b\u5ea6\n",
+      "   [3, 4, 2,...,0]]]  # 1\u756a\u76ee\u306e...\n",
       "# tocsr():  sparse matrix\u3092CSR\u5f62\u5f0f\u306b\u5909\u63db\u3001CSR\u306f\u639b\u3051\u7b97\u3084\u8db3\u3057\u7b97\u304c\u901f\u304f\u3001\u884c\u3092\u53d6\u308a\u51fa\u3059\u306e\u304c\u901f\u3044\u758e\u884c\u5217\u306e\u5f62\u5f0f\n",
       "# \u53c2\u8003 http://docs.scipy.org/doc/scipy-0.14.0/reference/sparse.html\n",
       "X_train = cv.transform(comments_train).tocsr()\n",
